update of recent search

--- a/index.html
+++ b/index.html
@@ -22,26 +22,16 @@
                  </div>
                  <button type="submit"  id="search-btn" class="btn btn-primary" >Search</button>
              </form>
-             <!--Suggested cities-->
-             <section class="buttons">
-                <button type="button" class="btn btn-secondary" id="atalanta">Atalanta</button>
-                <button type="button" class="btn btn-secondary">Denver</button>
-                <button type="button" class="btn btn-secondary">Seatle</button>
-                <button type="button" class="btn btn-secondary">San Francisco</button>
-                <button type="button" class="btn btn-secondary">Orlando</button>
-                <button type="button" class="btn btn-secondary">New York</button>
-                <button type="button" class="btn btn-secondary">Chicago</button>
-                <button type="button" class="btn btn-secondary">Austin</button>
-             </section>      
+             
              
         </section>
-        <!--Forecast Temp Wind Humdity-->
+        <!-- Temperature Wind Humdity-->
         <section class="forecast">
             <card class="info">
-                <h1>Atalanta</h1>
+                <h1></h1>
                 <p>Temp:</p>
                 <p>Wind:</p>
-                <p>Humdity:</p>
+                <p>Humidity:</p>
             </card>
             <section class="5-day-forecast">
                 <card>
@@ -52,31 +42,31 @@
                         <h5></h5>
                         <p>Temp:</p>
                         <p>Wind:</p>
-                        <p>Humdity:</p>
+                        <p>Humidity:</p>
                     </card>
                     <card class="day-2">
                         <h5></h5>
                         <p>Temp:</p>
                         <p>Wind:</p>
-                        <p>Humdity:</p>
+                        <p>Humidity:</p>
                     </card>
                     <card class="day-3">
                         <h5></h5>
                         <p>Temp:</p>
                         <p>Wind:</p>
-                        <p>Humdity:</p>
+                        <p>Humidity:</p>
                     </card>
                     <card class="day-4">
                         <h5></h5> 
                         <p>Temp:</p>
                         <p>Wind:</p>
-                        <p>Humdity:</p>
+                        <p>Humidity:</p>
                     </card>
                     <card class="day-5">
                         <h5></h5>
                         <p>Temp:</p>
                         <p>Wind:</p>
-                        <p>Humdity:</p>
+                        <p>Humidity:</p>
                     </card>
                 </section>
             </section>
