fix on display City Name

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <!-- Temperature Wind Humdity-->
         <section class="forecast">
             <card class="info">
-                <h1></h1>
-                <p>Temp:</p>
-                <p>Wind:</p>
-                <p>Humidity:</p>
+                <h1 id="display-city"></h1>
+                <p id="temp"></p>
+                <p id="wind"></p>
+                <p id="humidity"></p>
             </card>
             <section class="5-day-forecast">
                 <card>
